--- a/TraversalCoreProject/Areas/Admin/Views/Excel/Index.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/Excel/Index.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>Excel Raporları</h1><br />
-
+<h1>Excel Raporları</h1>
+<hr />
 <a href="/Admin/Excel/StaticExcelReport/" class="btn btn-outline-primary">Statik Excel Raporu</a><br><br>
 
 <a href="/Admin/Excel/DestinationExcelReport/" class="btn btn-outline-primary">Tur Rotaları Excel Raporu</a><br>
