--- a/TraversalCoreProject/Areas/Admin/Views/PdfReport/Index.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/PdfReport/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>PDF Raporları</h1>
+<hr />
+<a href="/Admin/PdfReport/StaticPdfReport/" class="btn btn-outline-primary">Statik PDF Raporu</a><br><br>
 
-<a href="/Admin/PdfReport/StaticPdfReport/" class="btn btn-outline-primary">Statik PDF Raporu</a><br>
-
-<a href="/Admin/PdfReport/StaticCustomerReport/" class="btn btn-outline-primary">Statik Misafir Raporu</a>
+<a href="/Admin/PdfReport/StaticCustomerReport/" class="btn btn-outline-primary">Statik Misafir Raporu</a> <!--Türkçe karakter sorunu-->
