--- a/TraversalCoreProject/Views/Admin/_PartialSidebar.cshtml
+++ b/TraversalCoreProject/Views/Admin/_PartialSidebar.cshtml
@@ -1,7 +1,7 @@
 ﻿<ul class="menu-inner py-1">
     <!-- Dashboard -->
     <li class="menu-item">
-        <a href="index.html" class="menu-link">
+        <a href="/Admin/Dashboard/Index/" class="menu-link">
             <i class="menu-icon tf-icons bx bx-home-circle"></i>
             <div data-i18n="Analytics">Dashboard</div>
         </a>
@@ -60,12 +60,12 @@
             <div data-i18n="Analytics">Mail Listesi</div>
         </a>
     </li>
-    <li class="menu-item">
+    @* <li class="menu-item">
         <a href="index.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-message"></i>
             <div data-i18n="Analytics">Öne Çıkanlar 2</div>
         </a>
-    </li>
+    </li> *@
     <li class="menu-item">
         <a href="index.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-lock-alt"></i>
@@ -76,6 +76,18 @@
         <a href="index.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-extension"></i>
             <div data-i18n="Analytics">Roller</div>
+        </a>
+    </li>
+    <li class="menu-item">
+        <a href="/Admin/Excel/Index/" class="menu-link">
+            <i class="menu-icon tf-icons bx bx-table"></i>
+            <div data-i18n="Analytics">Excel Raporları</div>
+        </a>
+    </li>
+    <li class="menu-item">
+        <a href="/Admin/PdfReport/Index/" class="menu-link">
+            <i class="menu-icon tf-icons bx bxs-file-pdf"></i>
+            <div data-i18n="Analytics">PDF Raporları</div>
         </a>
     </li>
 </ul>
